--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -19,3 +19,6 @@ $portfolio-bg-color:#000;
 $vgrid:20px;
 $footerHeight:66px;
 $footerHomeHeight:87px;
+
+$mobileHeaderHeight:40px;
+$headerBorderWidth:4px;
