--- a/css/screen.css
+++ b/css/screen.css
@@ -198,7 +198,7 @@ p {
       body.home > footer p {
         font-size: 24px; } }
   body:not(.home) > footer p {
-    padding: 1em 0; }
+    padding-top: 1em; }
   body.leistungen > main p {
     text-align: center; }
 
@@ -309,6 +309,10 @@ table {
 .st0 {
   fill: #A6ABAE; }
 
+* {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
 .leftalign {
   float: left; }
 
@@ -380,6 +384,9 @@ table {
     width: 40.29137%; }
     body > header .container .logo:last-child {
       margin-right: 0; } }
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  body > footer .container {
+    padding: 0 2em; } }
 @media screen and (min-width: 960px) {
   body > footer .container.columns > div {
     float: left;
@@ -388,6 +395,24 @@ table {
     width: 23.23176%; }
     body > footer .container.columns > div:last-child {
       margin-right: 0; } }
+@media screen and (max-width: 480px) {
+  .container.contact-buttons > div {
+    margin-bottom: 2em; } }
+@media screen and (min-width: 736px) and (max-width: 960px) {
+  .container.contact-buttons > div {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 48.82117%;
+    padding-bottom: 1rem; }
+    .container.contact-buttons > div:last-child {
+      margin-right: 0; }
+    .container.contact-buttons > div:nth-child(2n) {
+      margin-right: 0; }
+    .container.contact-buttons > div:nth-child(2n+1) {
+      clear: left; }
+    .container.contact-buttons > div:last-child {
+      width: 100%; } }
 @media screen and (min-width: 960px) {
   .container.contact-buttons {
     margin-bottom: 4.5rem; }
@@ -423,17 +448,19 @@ table {
 
 @media screen and (min-width: 736px) {
   body[class*="subpages"] article > aside {
-    float: right; }
+    float: right;
+    margin-right: 0; }
     body[class*="subpages"] article > aside img {
       float: right; } }
 body.leistungen article {
-  text-align: center;
-  margin-bottom: 30px; }
+  text-align: center; }
+  body.leistungen article .post_content {
+    margin-bottom: 30px; }
   @media screen and (max-width: 480px) {
     body.leistungen article {
       width: 100%;
       padding-top: 20px; } }
-  @media screen and (min-width: 736px) and (orientation: landscape) {
+  @media screen and (min-width: 736px) {
     body.leistungen article {
       float: left;
       display: block;
@@ -483,11 +510,11 @@ body.leistungen article {
     width: 48.82117%; }
     #portfolio .portfolio-item:last-child {
       margin-right: 0; }
-    #portfolio .portfolio-item:nth-child(3n) {
+    #portfolio .portfolio-item:nth-child(2n) {
       margin-right: 0; }
-    #portfolio .portfolio-item:nth-child(3n+1) {
+    #portfolio .portfolio-item:nth-child(2n+1) {
       clear: left; } }
-@media screen and (min-width: 768px) and (max-width: 959px) {
+@media screen and (min-width: 769px) and (max-width: 959px) {
   #portfolio .portfolio-item {
     float: left;
     display: block;
@@ -613,7 +640,8 @@ nav.nav.open {
   -webkit-transition: all 0.15s ease-out 0s;
   -moz-transition: all 0.15s ease-out 0s;
   transition: all 0.15s ease-out 0s;
-  min-height: 340px; }
+  min-height: 340px;
+  overflow: scroll; }
   @media screen and (min-width: 480px) and (max-width: 992px) {
     nav.nav.open {
       width: 50% !important; } }
@@ -657,18 +685,25 @@ html {
   position: relative;
   min-height: 100%; }
 
-@media screen and (min-width: 992px) {
-  body.home {
-    margin-bottom: 87px; }
-    body.home > footer {
-      height: 87px; }
-  body:not(.kontakt) {
-    margin-bottom: 66px; }
-    body:not(.kontakt) > footer {
-      height: 66px;
-      width: 100vW;
-      position: absolute;
-      bottom: 0; } }
+body {
+  /*    &:not(.home){
+              background:$primary-color;
+              > main {
+                  background: white;
+              } 
+      }*/ }
+  @media screen and (min-width: 768px) {
+    body.home {
+      margin-bottom: 87px; }
+      body.home > footer {
+        height: 87px; }
+    body:not(.kontakt) {
+      margin-bottom: 66px; }
+      body:not(.kontakt) > footer {
+        height: 66px;
+        width: 100vW;
+        position: absolute;
+        bottom: 0; } }
 
 /* end sticky footer */
 /*Layout Home */
@@ -724,7 +759,7 @@ body:not(.home) > header .logo {
   background: white; }
 @media screen and (max-width: 736px) {
   body:not(.home) > main .post_content {
-    padding: 1em 2em; } }
+    /*                    padding:1em 2em;*/ } }
 body:not(.home) > .footer {
   background: #6D3332; }
   body:not(.home) > .footer * {
@@ -739,7 +774,13 @@ body.kontakt > main, body.leistungen > main {
   padding-top: 5.3em; }
 body .intro {
   margin-bottom: 30px; }
-  @media screen and (max-width: 992px) {
+  @media screen and (min-width: 480px) and (orientation: portrait) {
+    body .intro {
+      padding: 0; } }
+  @media screen and (min-width: 480px) and (max-width: 768px) {
+    body .intro {
+      padding: 1em 2em; } }
+  @media screen and (min-width: 768px) and (max-width: 992px) {
     body .intro {
       padding: 2em;
       margin: 0; } }
@@ -797,7 +838,7 @@ body .intro {
       top: 0;
       left: 0;
       width: 100%;
-      z-index: 10;
+      z-index: 999;
       border-bottom: 4px solid #000;
       min-height: 44px; }
       #header .nav {
@@ -816,7 +857,11 @@ body .intro {
     #header nav {
       left: 0;
       right: 0; } }
-  @media screen and (min-width: 480px) and (max-width: 767px) {
+  @media screen and (min-width: 480px) and (max-width: 600px) {
+    #header .logo a {
+      background-size: 35% auto;
+      padding-bottom: calc(35% * 1/3); } }
+  @media screen and (min-width: 600px) and (max-width: 769px) {
     #header .logo a {
       background-size: 50% auto;
       padding-bottom: calc(50% * 1/3); } }
@@ -850,7 +895,7 @@ body .intro {
     font-size: 1.6em; } }
 @media screen and (min-width: 992px) {
   body.home article h1 {
-    margin: 15vH 3em; } }
+    margin: 12vH 3em; } }
 body.leistungen article .thumbnail {
   background: transparent;
   border: 0;
@@ -860,8 +905,12 @@ body.leistungen article .thumbnail {
     width: auto;
     height: 50px;
     max-width: none; }
-.flexslider article > section.flexcaption {
-  padding-right: 1.2em; }
+@media screen and (max-width: 992px) {
+  .flexslider article > section.flexcaption {
+    padding: 0 2em; } }
+@media screen and (min-width: 992px) {
+  .flexslider article > section.flexcaption {
+    padding-right: 1.2em; } }
 
 @media screen and (max-width: 480px) and (orientation: portrait) {
   .post_content {
@@ -899,6 +948,8 @@ body.leistungen article .thumbnail {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover; }
+    .portfolio-item > .portfolio_thumbnail img {
+      display: none; }
     .portfolio-item > .portfolio_thumbnail span {
       visibility: hidden; }
   .portfolio-item > .portfolio_content {
@@ -944,6 +995,8 @@ body.leistungen article .thumbnail {
           left: 100%;
           right: calc(-106% - 10px); } }
     .portfolio-item:hover > .portfolio_thumbnail, .portfolio-item:focus > .portfolio_thumbnail {
+      -webkit-filter: grayscale(0%);
+      filter: grayscale(0%);
       border: 5px solid #000;
       background-blend-mode: normal; }
     @media screen and (min-width: 480px) and (max-width: 768px) {
