--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -31,6 +31,10 @@ $grid-columns: 12;
         }
     }
     body > footer & {
+        @media screen and (min-width:$screen-xs + 1) and (max-width:$screen-sm){
+            padding:0 2em;
+        }
+        
         &.columns{
             @media screen and (min-width:960px){
                 > div {@include span-columns(3);}
@@ -38,6 +42,19 @@ $grid-columns: 12;
         }
     }
     &.contact-buttons {
+        @media screen and (max-width:$screen-xs) {
+            > div {margin-bottom:2em;}
+        }
+        @media screen and (min-width:$screen-maxPhone) and (max-width:960px){
+            > div {
+                @include span-columns(6);
+                @include omega(2n);
+                padding-bottom:$paragraph-margin;
+                &:last-child{
+                    @include fill-parent();
+                }
+            }
+        }
         @media screen and (min-width:960px){
             margin-bottom:4.5 * $paragraph-margin;
             > div {@include span-columns(4);}
@@ -73,18 +90,19 @@ article{
         @media screen and (min-width:$screen-maxPhone){
             body[class*="subpages"] &{
                 float: right;
+                @include omega();
                 img {float:right;}
             }
         }
     }
     body.leistungen & {
         text-align: center;
-        margin-bottom: 1.5 * $vgrid;
+        .post_content {margin-bottom: 1.5 * $vgrid;}
         @media screen and (max-width:$screen-xs){
             @include fill-parent();
             padding-top:$vgrid;
         }
-        @media screen and (min-width:$screen-maxPhone) and (orientation:landscape){
+        @media screen and (min-width:$screen-maxPhone){
             @include span-columns(6 of 12);
             > * {
                 @include fill-parent();
@@ -118,9 +136,9 @@ article{
         }
         @media screen and (min-width:$screen-xs) and (max-width:$screen-sm){
             @include span-columns(6);
-            @include omega(3n);
+            @include omega(2n);
         }
-        @media screen and (min-width:$screen-sm) and (max-width:960px - 1px){
+        @media screen and (min-width:$screen-sm + 1) and (max-width:960px - 1px){
             @include span-columns(4);
             @include omega(3n);
         }
