--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -116,7 +116,7 @@ p {
       }
   }
   body:not(.home) > footer & {
-      padding:1em 0;
+      padding-top:1em;
   }
   body.leistungen > main &{
       text-align: center;
