--- a/sass/content/_content.scss
+++ b/sass/content/_content.scss
@@ -33,7 +33,7 @@ article{
             }
         }
         @media screen and (min-width:$screen-md){
-            h1 { margin:15vH 3em;}
+            h1 { margin:12vH 3em;}
         }
     }
 
@@ -52,7 +52,10 @@ article{
     }
     .flexslider & {
         > section.flexcaption{
-            padding-right: 1.2em;
+            @media screen and (max-width:$screen-md){
+                padding: 0 2em;
+            }
+            @media screen and (min-width:$screen-md){padding-right: 1.2em;}
         }
     }
 }
