--- a/sass/content/_layout.scss
+++ b/sass/content/_layout.scss
@@ -4,7 +4,14 @@ html{
     min-height: 100%;
 }
 body {
-    @media screen and (min-width:$screen-md){
+/*    &:not(.home){
+            background:$primary-color;
+            > main {
+                background: white;
+            } 
+    }*/
+
+    @media screen and (min-width:$screen-sm){
         &.home{
             margin-bottom: $footerHomeHeight;
             > footer {
@@ -87,7 +94,7 @@ body{
         > main {
             @media screen and (max-width:$screen-maxPhone){
                 .post_content{
-                    padding:1em 2em;
+/*                    padding:1em 2em;*/
                 }
             }
         }
@@ -108,7 +115,13 @@ body{
     }
     .intro{
         margin-bottom: 1.5 * $vgrid;
-        @media screen and (max-width:$screen-md){
+        @media screen and (min-width:$screen-xs) and (orientation:portrait){
+         padding:0;
+        }
+        @media screen and (min-width:$screen-xs) and (max-width:$screen-sm){
+            padding:1em 2em;
+        }
+        @media screen and (min-width:$screen-sm) and (max-width:$screen-md){
             padding:2em;
             margin:0;
         }
@@ -182,7 +195,7 @@ body{
         top: 0;
         left: 0;
         width: 100%;
-        z-index: 10;
+        z-index: 999;
         border-bottom:$headerBorderWidth solid #000;
         min-height: $mobileHeaderHeight + $headerBorderWidth;
         .nav{
@@ -207,14 +220,17 @@ body{
             right: 0;
         }
     }
-    @media screen and (min-width:$screen-xs) and (max-width:$screen-sm - 1){
-        .logo{
-            a {
+    @media screen and (min-width:$screen-xs) and (max-width:$screen-smallPad){
+        .logo a {
+                background-size: 35% auto;
+                padding-bottom:calc(35% * 1/3);
+            }
+    }
+    @media screen and (min-width:$screen-smallPad) and (max-width:$screen-sm + 1){
+        .logo a {
                 background-size: 50% auto;
                 padding-bottom:calc(50% * 1/3);
-
             }
-        }
     }
     @media screen and (min-width:$screen-md ){
         .logo, .nav {
