--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -14,14 +14,14 @@ $text-muted-color:          lighten($text-color,25%);
 
 html,
 body {
-font-size: 100%;
-/*prevents ios safari from zooming on orientation change (maybe)*/
- -webkit-text-size-adjust: none;
+    font-size: 100%;
+    /*prevents ios safari from zooming on orientation change (maybe)*/
+    -webkit-text-size-adjust: none;
 }
 // body typography
 body {
-  color: $body-text-color;
-  font-family: $body-font-family;
+    color: $body-text-color;
+    font-family: $body-font-family;
 }
 h1,
 h2,
@@ -29,58 +29,58 @@ h3,
 h4,
 h5,
 h6{
-  font-family: $headings-font-family;
-  line-height: 1.1;
-  font-weight:400;
-  color: $heading-text-color;
-  @media screen and (min-width:$screen-md){
-      margin: 0 0 3 * $paragraph-margin;   
-  }
-  body.home &{
-      color:white !important;
-      margin:0;
-  }
-  &.logo span{
-      margin:0;
-      font-weight: 300;
-      @media screen and (min-width:$screen-md) and (max-width:$screen-lg){
-         font-size: 13px; 
-      }
-      @media screen and (min-width:$screen-lg){
-      font-size: 14px;
-      }
-  }
-  article &, .page & {
-      @media screen and (max-width:$screen-xs){
-          font-size:$rem-base * 1.375;
-      }
-      
-      @media screen and (min-width:$screen-md){
-          font-size:$rem-base * 3.125;
-      }
-      text-transform: uppercase;
-      line-height: 1;
-      letter-spacing: -.025em;
-      font-weight:900;
-      > span {color:$primary-color;}
-  }
-  .contact &{
-      text-align: center;
-  }
-  .portfolio_content &{
-      font-size: 1.25em;
-      margin:0;
-  }
-  body.leistungen article &{
-      font-size: 1.2em;
-      color:$primary-color;
-      margin:0 0 0.5 * $paragraph-margin 0;
-  }
-  .impressum &{
-      color:white;
-      font-size: 1.25em;
-      margin: 0 0 1 * $paragraph-margin;
-  }
+    font-family: $headings-font-family;
+    line-height: 1.1;
+    font-weight:400;
+    color: $heading-text-color;
+    @media screen and (min-width:$screen-md){
+        margin: 0 0 3 * $paragraph-margin;   
+    }
+    body.home &{
+        color:white !important;
+        margin:0;
+    }
+    &.logo span{
+        margin:0;
+        font-weight: 300;
+        @media screen and (min-width:$screen-md) and (max-width:$screen-lg){
+            font-size: 13px; 
+        }
+        @media screen and (min-width:$screen-lg){
+            font-size: 14px;
+        }
+    }
+    article &, .page & {
+        @media screen and (max-width:$screen-xs){
+            font-size:$rem-base * 1.375;
+        }
+
+        @media screen and (min-width:$screen-md){
+            font-size:$rem-base * 3.125;
+        }
+        text-transform: uppercase;
+        line-height: 1;
+        letter-spacing: -.025em;
+        font-weight:900;
+        > span {color:$primary-color;}
+    }
+    .contact &{
+        text-align: center;
+    }
+    .portfolio_content &{
+        font-size: 1.25em;
+        margin:0;
+    }
+    body.leistungen article &{
+        font-size: 1.2em;
+        color:$primary-color;
+        margin:0 0 0.5 * $paragraph-margin 0;
+    }
+    .impressum &{
+        color:white;
+        font-size: 1.25em;
+        margin: 0 0 1 * $paragraph-margin;
+    }
 }
 .copyright{
     color:white;
@@ -90,38 +90,41 @@ h6{
 }
 // paragraph text
 p {
-  margin: 0 0 $paragraph-margin;
-  font-family: inherit;
-  font-size: $rem-base;
-  font-weight: normal;
-  line-height: $base-line-height;
+    margin: 0 0 $paragraph-margin;
+    font-family: inherit;
+    font-size: $rem-base;
+    font-weight: normal;
+    line-height: $base-line-height;
 
-  &.lead {
-    font-size: 1rem * 1.125;
-    line-height: 1.33;
-  }
-  body.home > footer & {
-      font-family: $headings-font-family;
-      font-size: 1.6em;
-      text-transform: uppercase;
-      font-weight: bold !important;
-      line-height: 1;
-      margin-bottom: 0;
-      color:$base-color-white;
-      @media screen and (max-width:$screen-xs){
-          font-size:$rem-base * 0.875;
-      }
-      @media screen and (min-width:$screen-md){
-          font-size:$rem-base * 1.5;
-      }
-  }
-  body:not(.home) > footer & {
-      padding-top:1em;
-  }
-  body.leistungen > main &{
-      text-align: center;
-  }
+    &.lead {
+        font-size: 1rem * 1.125;
+        line-height: 1.33;
+    }
+
+    body:not(.home) > .footer & {
+        padding-top:1em;
+    }
+    body.leistungen > main &{
+        text-align: center;
+    }
 }
+.container.keywords {
+        font-family: $headings-font-family;
+        font-size: 1.6em;
+        text-transform: uppercase;
+        text-align: center;
+        font-weight: bold !important;
+        line-height: 1;
+        margin-bottom: 0;
+        color:$base-color-white;
+        @media screen and (max-width:$screen-xs){
+            font-size:$rem-base * 0.875;
+        }
+        @media screen and (min-width:$screen-md){
+            font-size:$rem-base * 1.5;
+        }
+    }
+
 a{
     color:$text-color;
     .logo &{
@@ -133,64 +136,64 @@ a{
 // lists
 ul,
 ol {
-  padding-left: 1.5rem;
+    padding-left: 1.5rem;
 
-  li {
-    line-height: $base-line-height;
-  }
-
-  &.unstyled {
-    padding: 0;
-    list-style: none;
-  }
-
-  &.inline {
-    margin: 0 1rem $paragraph-margin -1rem;
-    padding: 0;
-    list-style: none;
-    overflow: hidden;
-    
-    & > li {
-      display: block;
-      float: left;
-      margin-left: 1rem;
-      list-style: none;
+    li {
+        line-height: $base-line-height;
     }
-  }
+
+    &.unstyled {
+        padding: 0;
+        list-style: none;
+    }
+
+    &.inline {
+        margin: 0 1rem $paragraph-margin -1rem;
+        padding: 0;
+        list-style: none;
+        overflow: hidden;
+
+        & > li {
+            display: block;
+            float: left;
+            margin-left: 1rem;
+            list-style: none;
+        }
+    }
 }
 
 dl {
-  margin: 0 0 $paragraph-margin;
-  line-height: $base-line-height;
+    margin: 0 0 $paragraph-margin;
+    line-height: $base-line-height;
 }
 
 dt {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 dd {
-  margin: 0 0 0.5rem;
+    margin: 0 0 0.5rem;
 }
 
 // blockquotes
 blockquote {
-  position: relative;
-  margin: 1.5rem 1rem 1.5rem 3rem;
+    position: relative;
+    margin: 1.5rem 1rem 1.5rem 3rem;
 
-  p {
-    @extend .lead;
-  }
+    p {
+        @extend .lead;
+    }
 
-  &:before {
-    content: "“";
-    display: block;
-    position: absolute;
-    top: -1rem;
-    left: -3rem;
-    color: $text-muted-color;
-    font-size: 5rem;
-    line-height: 1;
-  }
+    &:before {
+        content: "“";
+        display: block;
+        position: absolute;
+        top: -1rem;
+        left: -3rem;
+        color: $text-muted-color;
+        font-size: 5rem;
+        line-height: 1;
+    }
 }
 .text-left { text-align: left; }
 .text-center { text-align: center; }
