--- a/css/screen.css
+++ b/css/screen.css
@@ -20,6 +20,8 @@ html {
 /*** Mixins & Placeholders ***/
 /**** caret ****/
 /* Bsp. @include alpha-background-color(rgba(black, 0.35), white); */
+/******* SVG *********/
+/*** WP Specials ***/
 /* Mediaqueries breakpoints */
 /* Helper Classes */
 html,
@@ -195,6 +197,20 @@ h6 {
   font-family: "Source Sans Pro", Arial, sans-serif;
   font-weight: 600; }
 
+.link-impressum {
+  color: #fff;
+  font-size: .85em;
+  font-weight: 400;
+  float: right; }
+  .home .link-impressum {
+    display: block;
+    text-align: center;
+    float: none;
+    line-height: 2; }
+
+.copyright-text {
+  float: left; }
+
 p {
   margin: 0 0 1rem;
   font-family: inherit;
@@ -229,8 +245,8 @@ a {
   color: #000; }
   .logo a {
     color: #52595F; }
-    body.home .logo a {
-      color: #fff; }
+    body.home .logo a, body.home .logo a:hover {
+      color: #fff !important; }
 
 ul,
 ol {
@@ -529,10 +545,7 @@ body.leistungen article {
       clear: both;
       content: "";
       display: table; } }
-@media screen and (max-width: 480px) {
-  #portfolio .portfolio-item {
-    margin-bottom: 2em; } }
-@media screen and (min-width: 480px) and (max-width: 768px) {
+@media screen and (min-width: 480px) and (max-width: 600px) {
   #portfolio .portfolio-item {
     float: left;
     display: block;
@@ -544,7 +557,7 @@ body.leistungen article {
       margin-right: 0; }
     #portfolio .portfolio-item:nth-child(2n+1) {
       clear: left; } }
-@media screen and (min-width: 769px) and (max-width: 959px) {
+@media screen and (min-width: 601px) and (max-width: 959px) {
   #portfolio .portfolio-item {
     float: left;
     display: block;
@@ -733,25 +746,18 @@ html {
   position: relative;
   min-height: 100%; }
 
-body {
-  /*    &:not(.home){
-              background:$primary-color;
-              > main {
-                  background: white;
-              } 
-      }*/ }
-  @media screen and (min-width: 768px) {
-    body.home {
-      margin-bottom: 87px; }
-      body.home > .footer {
-        height: 87px; }
-    body:not(.kontakt) {
-      margin-bottom: 66px; }
-      body:not(.kontakt) > footer {
-        height: 66px;
-        width: 100vW;
-        position: absolute;
-        bottom: 0; } }
+@media screen and (min-width: 768px) {
+  body.home {
+    margin-bottom: 87px; }
+    body.home > .footer {
+      height: 87px; }
+  body:not(.kontakt) {
+    margin-bottom: 66px; }
+    body:not(.kontakt) > footer {
+      height: 66px;
+      width: 100vW;
+      position: absolute;
+      bottom: 0; } }
 
 /* end sticky footer */
 /*Layout Home */
@@ -1102,6 +1108,7 @@ body.leistungen article .thumbnail {
   line-height: 50px;
   -webkit-border-radius: 25px;
   border-radius: 25px;
+  overflow: hidden;
   font-size: 0;
   line-height: 0; }
   [class*="flex-nav"] > a:before {
