--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -98,6 +98,7 @@ h6{
             text-align: center;
             float: none;
             line-height: 2;
+            margin-top: 2em;
         }
     }
     .copyright-text{float: left;}
