--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -92,7 +92,8 @@ h6{
         color:#fff;
         font-size: .85em;
         font-weight:400;
-        float: right;
+        @media screen and (min-width:$screen-md){float: right;}
+        
         .home & {
             display: block;
             text-align: center;
