--- a/sass/content/_navigation.scss
+++ b/sass/content/_navigation.scss
@@ -139,8 +139,8 @@ nav.nav {
         position:absolute;
         z-index: 999;
         svg {
-            @include size(30px);
-            margin:.5em;
+            @include size(40px);
+            padding:.5em;
             background:$base-color-white;
         }
     }
