--- a/sass/content/_layout.scss
+++ b/sass/content/_layout.scss
@@ -27,6 +27,7 @@ body {
 /*Layout Home */
 body{
     &.home{
+        height:100%;
         height:100vH;
         position: relative;
         overflow:hidden;
