--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -4,6 +4,7 @@
 @import "/Users/chilliscope/Documents/Webseiten/toolbox/sass/myMixins/mixins";
 @import "/Users/chilliscope/Documents/Webseiten/toolbox/sass/myMixins/breakpoints";
 
+@import "utils/_font";
 @import "utils/_variables";
 @import "utils/_mixins";
 @import "base/_typography";
