--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -15,6 +15,7 @@
 @import "content/_navigation";
 @import "content/_layout";
 @import "content/_content";
+@import "content/_portfolio";
 @import "content/_media";
 //@import "base/_ie";
 @import "_shame.scss";
