--- a/sass/snippet.scss
+++ b/sass/snippet.scss
@@ -1,11 +1,13 @@
 /**** Portfolio ****/
 .portfolio-item{
-    
-
-   
-    &:hover, &:focus{
-       
 
 
-    }
+	&:hover, &:focus{
+		
+		
+
+		
+		
+	}/** End hover/focus **/
 }
+
