--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -142,13 +142,13 @@ article{
             @include span-columns(6);
             @include omega(2n);
         }
-        @media screen and (min-width:$screen-smallPad + 1) and (max-width:960px - 1px){
+        @media screen and (min-width:$screen-smallPad + 1){
             @include span-columns(4);
             @include omega(3n);
         }
-        @media screen and (min-width:960px){
+/*        @media screen and (min-width:960px){
             @include span-columns(3);
             @include omega(4n);
-        }
+        }*/
     }
 }
